<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Teacher_Add_student_page"
    android:background="#212121"
    android:orientation="vertical"
    android:layout_gravity="center"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/student_details_view"
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:text="@string/Enter_Student_Details"
                android:textSize="30sp"
                android:gravity="center"
                android:layout_marginTop="25dp"
                android:fontFamily="@font/montserrat_bold"
                android:textColor="#85c3cf"

                />

            <EditText
                android:id="@+id/student_roll_no"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:ems="10"
                android:fontFamily="@font/montserrat_regular"
                android:gravity="center"
                android:hint="@string/Student_Roll_no"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:textColor="#85c3cf"
                android:textColorHint="#85c3cf"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/student_name"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:autofillHints="Enter Name"
                android:ems="10"
                android:fontFamily="@font/montserrat_regular"
                android:gravity="center"
                android:hint="@string/Student_name"
                android:inputType="textPersonName"
                android:textColor="#85c3cf"
                android:textColorHint="#85c3cf"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/student_Father_name"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:ems="10"
                android:fontFamily="@font/montserrat_regular"
                android:gravity="center"
                android:hint="@string/Student_Fathers_name"
                android:inputType="textPersonName"
                android:textColor="#85c3cf"
                android:textColorHint="#85c3cf"
                android:textSize="20sp"
                android:importantForAutofill="no" />

            <EditText
                android:id="@+id/Student_phone_no"
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:ems="10"
                android:fontFamily="@font/montserrat_regular"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:gravity="center"
                android:inputType="phone"
                android:hint="@string/Student_Phone_no"
                android:textColorHint="#85c3cf"
                android:textColor="#85c3cf"
                android:textSize="20sp"
                android:importantForAutofill="no" />

            <EditText
                android:id="@+id/Student_email_id"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:ems="10"
                android:fontFamily="@font/montserrat_regular"
                android:gravity="center"
                android:hint="@string/Student_Email_Id"
                android:inputType="textWebEmailAddress"
                android:textColor="#85c3cf"
                android:textColorHint="#85c3cf"
                android:textSize="20sp"
                android:importantForAutofill="no" />

            <EditText
                android:id="@+id/Student_password"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:ems="10"
                android:fontFamily="@font/montserrat_regular"
                android:gravity="center"
                android:hint="@string/Student_password"
                android:inputType="textWebPassword"
                android:textColor="#85c3cf"
                android:textColorHint="#85c3cf"
                android:textSize="20sp"
                android:importantForAutofill="no" />

            <Button
                android:id="@+id/Add_student_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Add Student"
                android:fontFamily="@font/montserrat_bold"
                android:background="@drawable/button"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:textColor="@color/white"
                android:textSize="25sp"

                />


        </LinearLayout>
    </ScrollView>
</androidx.appcompat.widget.LinearLayoutCompat>